<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
	<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:gravity="top|center">
	    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_margin="3dp" android:text="@string/aboutAbout" android:id="@+id/aboutAbout" android:textColor="?android:textColorPrimary" android:textSize="@dimen/defaultFontSizeLarge"></TextView>
	    <ImageView android:src="@drawable/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/aboutIcon"></ImageView>
	    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/aboutTwijue" android:textSize="@dimen/defaultFontSizeMiddle" android:text="@string/appName" android:textColor="?android:textColorSecondary"></TextView>
	    <TextView android:text="@string/aboutSupportMsg" android:layout_width="wrap_content" android:textSize="@dimen/defaultFontSizeMiddle" android:layout_height="wrap_content" android:id="@+id/aboutSupport" android:textColor="?android:textColorSecondary"></TextView>
	    <TextView android:layout_width="fill_parent" android:layout_margin="3dp" android:layout_height="wrap_content" android:id="@+id/aboutDeveloper" android:text="@string/aboutDeveloper" android:textColor="?android:textColorPrimary" android:textSize="@dimen/defaultFontSizeLarge"></TextView>
	    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/aboutDevelopers" android:orientation="vertical" android:gravity="center" android:layout_margin="3dp">
	        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/aboutDeveloper1" android:text="@string/aboutDeveloper1" android:textSize="@dimen/defaultFontSizeMiddle" android:textColor="?android:textColorSecondary"></TextView>
	    </LinearLayout>
	    <TextView android:layout_width="fill_parent" android:layout_margin="3dp" android:layout_height="wrap_content" android:id="@+id/aboutSupporter" android:text="@string/aboutSupporter" android:textColor="?android:textColorPrimary" android:textSize="@dimen/defaultFontSizeLarge"></TextView>
	    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/aboutSupporters" android:layout_margin="3dp" android:gravity="center">
	        <TextView android:textSize="@dimen/defaultFontSizeMiddle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aboutSupporter1" android:id="@+id/aboutSupporter1" android:textColor="?android:textColorSecondary"></TextView>
	        <TextView android:textSize="@dimen/defaultFontSizeMiddle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aboutSupporter2" android:id="@+id/aboutSupporter2" android:textColor="?android:textColorSecondary"></TextView>
	        <TextView android:textSize="@dimen/defaultFontSizeMiddle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aboutSupporter3" android:id="@+id/aboutSupporter3" android:textColor="?android:textColorSecondary"></TextView>
	        <TextView android:textSize="@dimen/defaultFontSizeMiddle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aboutSupporter4" android:id="@+id/aboutSupporter4" android:textColor="?android:textColorSecondary"></TextView>
	        <TextView android:textSize="@dimen/defaultFontSizeMiddle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aboutSupporter5" android:id="@+id/aboutSupporter5" android:textColor="?android:textColorSecondary"></TextView>
	    </LinearLayout>
	    <TextView android:layout_width="fill_parent" android:layout_margin="3dp" android:layout_height="wrap_content" android:textColor="?android:textColorPrimary" android:id="@+id/aboutPoweredBy" android:text="@string/aboutPoweredBy" android:textSize="@dimen/defaultFontSizeLarge"></TextView>
	    <ImageView android:id="@+id/aboutTwitter4J" android:src="@drawable/twitter4j" android:scaleType="fitXY" android:layout_width="207dp" android:layout_height="45dp"></ImageView>
	</LinearLayout>
</ScrollView>
